Atualização do cabeçalho segundário

--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
 
             <form class="form_primeiro_cabecalho2" action="#" method="post">
 
-                <button class="botao2" type="submit"> <i class="fa-solid fa-user"></i> </button>
+                <button class="botao2" type="submit"> <i class="fa-solid fa-user"></i> </button> <p class="text_botao2">Bem vindo</p>
                 <!--a tag "i" estou utilizando o icone do fontawesome.com -->
     
             </form>
 
             <form class="form_primeiro_cabecalho3" action="#" method="post">
 
-                <button class="botao2" type="submit"> <i class="fa-solid fa-cart-plus"></i> </button>
+                <button class="botao2" type="submit"> <i class="fa-solid fa-cart-plus"></i> 
+                </button> <p>Carrinho</p>
                 <!--a tag "i" estou utilizando o icone do fontawesome.com -->
+
 
             </form>
 
@@ -49,8 +51,21 @@
 
       <section class="segunda_cabecalho">
 
+        <article class="link">
+          <i class="fa-solid fa-list"></i>  <p>Navegue pelo site</p>
+        </article>
 
+         <article class="abas">
 
+             <p class="mercado"><strong> Mercado</strong>  </p> 
+
+              <p class="pet"><strong>Espaço pet </strong> </p>
+
+              <p class="farmacia"><strong>Farmácia </strong> </p>
+
+              <p class="oferta"><strong>Ofertas </strong> </p>
+
+         </article>
 
 
 
