--- a/index3.html
+++ b/index3.html
@@ -16,15 +16,54 @@
   <header>
 
     <section class="primeiro_cabecalho">
-          <div class="imagem_logo"> <img src="/imagens/Grupo Seven.PNG" alt="Logo da empresa" width="75%"></div>
 
-          <form action="#" method="post">
+      <div class="imagem_logo"> <img src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" width="95%" height="100px"></div>
+
+          <form class="form_primeiro_cabecalho" action="#" method="post">
               
-            <input class="caixa_texto" type="text" name="search" id="search" placeholder="Procure aqui"required >
-            <button class="botao" type="submit"> <i class="fa-solid fa-magnifying-glass"></i> </button>
+              <input class="caixa_texto" type="text" name="search" id="search" placeholder="Procure aqui"required >
+              <button class="botao" type="submit"> <i class="fa-solid fa-magnifying-glass"></i> </button>
+            
+          </form>
+
+          <form class="form_primeiro_cabecalho2" action="#" method="post">
+
+              <button class="botao2" type="submit"> <i class="fa-solid fa-user"></i> </button> <p class="text_botao2">Bem vindo</p>
+              <!--a tag "i" estou utilizando o icone do fontawesome.com -->
+  
+          </form>
+
+          <form class="form_primeiro_cabecalho3" action="#" method="post">
+
+              <button class="botao2" type="submit"> <i class="fa-solid fa-cart-plus"></i> </button> <p>Carrinho</p>
+              <!--a tag "i" estou utilizando o icone do fontawesome.com -->
 
           </form>
-      </section>
+
+    </section>
+
+
+    <section class="segunda_cabecalho">
+
+      <article class="link">
+        <i class="fa-solid fa-list"></i>  <p>Navegue pelo site</p>
+      </article>
+
+       <article class="abas">
+
+           <p class="mercado"><strong> Mercado</strong>  </p> 
+
+            <p class="pet"><strong>Espaço pet </strong> </p>
+
+            <p class="farmacia"><strong>Farmácia </strong> </p>
+
+            <p class="oferta"><strong>Ofertas </strong> </p>
+
+       </article>
+
+
+
+    </section>
 
   </header>
 
