atualização no cabeçalho no css e criando links

--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grupo Seven / Espaço pet</title>
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/header.css">
 
@@ -17,7 +17,12 @@
 
     <section class="primeiro_cabecalho">
 
-      <div class="imagem_logo"> <img src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" width="95%" height="100px"></div>
+      <div class="imagem_logo">
+        
+            <a href="/index.html">
+                <img src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" width="95%" height="100px">
+            </a>
+      </div>
 
           <form class="form_primeiro_cabecalho" action="#" method="post">
               
@@ -28,7 +33,7 @@
 
           <form class="form_primeiro_cabecalho2" action="#" method="post">
 
-              <button class="botao2" type="submit"> <i class="fa-solid fa-user"></i> </button> <p class="text_botao2">Bem vindo</p>
+              <button class="botao2" type="submit"> <i class="fa-solid fa-user"></i> </button> <p class="text_botao2">Cadastro</p>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
   
           </form>
@@ -39,7 +44,7 @@
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
 
           </form>
-
+          <p class="correcao">cc</p>
     </section>
 
 
@@ -51,11 +56,15 @@
 
        <article class="abas">
 
-           <p class="mercado"><strong> Mercado</strong>  </p> 
+        <a class="tagA_segundo_cabecalho"  href="/index2.html">
+             <p class="mercado"><strong> Variedades</strong>  </p> 
+        </a>
 
-            <p class="pet"><strong>Espaço pet </strong> </p>
+            <p class="pet" id ="pag_pet"><strong>Espaço pet </strong> </p>
 
+        <a class="tagA_segundo_cabecalho"  href="/index4.html">
             <p class="farmacia"><strong>Farmácia </strong> </p>
+        </a>
 
             <p class="oferta"><strong>Ofertas </strong> </p>
 
