alteração nome dos arquivsos

--- a/farmacia.html
+++ b/farmacia.html
@@ -19,7 +19,7 @@
 
       <div class="imagem_logo">
         
-          <a href="/index.html">
+          <a href="/home.html">
               <img src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" width="95%" height="100px">
           </a>
       </div>
@@ -56,11 +56,11 @@
 
        <article class="abas">
 
-        <a class="tagA_segundo_cabecalho"  href="/index2.html">
+        <a class="tagA_segundo_cabecalho"  href="/variedades.html">
              <p class="mercado"><strong>Variedades</strong>  </p> 
         </a>
 
-        <a class="tagA_segundo_cabecalho"  href="index3.html">
+        <a class="tagA_segundo_cabecalho"  href="/pet.html">
              <p class="pet"><strong>Espaço pet</strong> </p>
         </a>
 
