--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <section class="primeiro_cabecalho">
 
       <div class="imagem_logo">
-          <a href="/index.html">
+          <a href="/home.html">
               <img class="imagem" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="95%" height="100px" >
           </a>
       </div>
@@ -63,15 +63,15 @@
          <article class="abas">
 
           
-            <a class="tagA_segundo_cabecalho"  href="/index2.html">
+            <a class="tagA_segundo_cabecalho"  href="/variedades.html">
                    <p class="mercado"><strong>Variedades</strong>  </p> 
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="index3.html">
+            <a class="tagA_segundo_cabecalho"  href="pet.html">
                     <p class="pet"><strong>Espaço pet</strong> </p>
             </a>
 
-            <a class="tagA_segundo_cabecalho"  href="/index4.html">
+            <a class="tagA_segundo_cabecalho"  href="/farmacia.html">
               <p class="farmacia"><strong>Farmácia </strong> </p>
             </a>
 
