--- a/pet.html
+++ b/pet.html
@@ -19,7 +19,7 @@
 
       <div class="imagem_logo">
         
-            <a href="/index.html">
+            <a href="/home.html">
                 <img src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa" width="95%" height="100px">
             </a>
       </div>
@@ -56,13 +56,13 @@
 
        <article class="abas">
 
-        <a class="tagA_segundo_cabecalho"  href="/index2.html">
+        <a class="tagA_segundo_cabecalho"  href="/variedades.html">
              <p class="mercado"><strong> Variedades</strong>  </p> 
         </a>
 
             <p class="pet" id ="pag_pet"><strong>Espaço pet </strong> </p>
 
-        <a class="tagA_segundo_cabecalho"  href="/index4.html">
+        <a class="tagA_segundo_cabecalho"  href="/farmacia.html">
             <p class="farmacia"><strong>Farmácia </strong> </p>
         </a>
 
