--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/body.css">
+    <link rel="stylesheet" href="/css/body_home.css">
 
 </head>
 
