alreração no escopo do html

--- a/home.html
+++ b/home.html
@@ -86,11 +86,23 @@
   </header>
 
   <main>
+
    
-    
+        <section>
 
-<p></p>
+          <!--carrosel de imagens do site parte superior -->
 
+
+        </section>
+
+
+
+        <section>
+
+            <!--corpo com imagens e detalhes com texto etc...-->
+
+
+        </section>
 
 
 
