--- a/pet.html
+++ b/pet.html
@@ -76,20 +76,29 @@
 
   </header>
 
+
   <main>
+
    
+        <section>
+
+        <!--carrosel de imagens do site parte superior -->
+
+
+        </section>
 
 
 
+        <section>
+
+            <!--corpo com imagens e detalhes com texto etc...-->
+
+
+        </section>
 
 
 
-
-
-
-
-  </main>
-
+</main>
 
 
 
