--- a/variedades.html
+++ b/variedades.html
@@ -77,19 +77,27 @@
   </header>
 
   <main>
+
    
+        <section>
 
-  
-
-
-
+          <!--carrosel de imagens do site parte superior -->
 
 
+        </section>
 
 
 
-  </main>
+        <section>
 
+            <!--corpo com imagens e detalhes com texto etc...-->
+
+
+        </section>
+
+
+
+</main>
 
 
 
