--- a/farmacia.html
+++ b/farmacia.html
@@ -76,21 +76,29 @@
 
   </header>
 
+
   <main>
+
    
+      <section>
 
-   <p></p>
-
-
-
+        <!--carrosel de imagens do site parte superior -->
 
 
+      </section>
 
 
 
-  </main>
+      <section>
+
+          <!--corpo com imagens e detalhes com texto etc...-->
 
 
+      </section>
+
+
+
+</main>
 
 
  <footer>
