--- a/pet.html
+++ b/pet.html
@@ -33,7 +33,7 @@
 
           <form class="form_primeiro_cabecalho2" action="#" method="post">
 
-              <button class="botao2" type="submit"> <i class="fa-solid fa-user"></i> </button> <p class="text_botao2">Cadastro</p>
+            <a class="botao2"  href="/formulario.html">  <i class="fa-solid fa-user"></i></a> <p class="text_botao2">Cadastro</p>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
   
           </form>
