--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
       <section class="segunda_cabecalho">
 
         <article class="link">
-          <i class="fa-solid fa-list"></i>  <p>Navegue pelo site</p>
+          <i class="fa-solid fa-list"></i>  <p>Navegue pelo siteeeeeee</p>
         </article>
 
          <article class="abas">
