Adiconando formulário de cadastro e header responsivo.

--- a/pet.html
+++ b/pet.html
@@ -40,7 +40,7 @@
 
           <form class="form_primeiro_cabecalho3" action="#" method="post">
 
-              <button class="botao2" type="submit"> <i class="fa-solid fa-cart-plus"></i> </button> <p>Carrinho</p>
+              <button class="botao2" type="submit"> <i class="fa-solid fa-cart-plus"></i> </button> <p class="text_botao3" >Carrinho</p>
               <!--a tag "i" estou utilizando o icone do fontawesome.com -->
 
           </form>
@@ -51,7 +51,7 @@
     <section class="segunda_cabecalho">
 
       <article class="link">
-        <i class="fa-solid fa-list"></i>  <p>Navegue pelo site</p>
+        <i class="fa-solid fa-list"></i> <p class="texto_nav"> Navegue pelo site</p> 
       </article>
 
        <article class="abas">
