adicionando link css pet html

--- a/pet.html
+++ b/pet.html
@@ -8,6 +8,7 @@
     <title>Grupo Seven / Espaço pet</title>
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/body_pet.css">
 
 </head>
 
