subindo imagens do pet

--- a/pet.html
+++ b/pet.html
@@ -81,18 +81,53 @@
   <main>
 
    
-        <section>
+        <section class="banner">
+          <div class="caesegatos_com_br">
+            <div class="box-banner">
+              <img id="caminhaPet" alt="" src="imagens\caesegatos_com_br.jpg" complete="complete">
+              </div>
+            </div>
 
-        <!--carrosel de imagens do site parte superior -->
-
-
+      
         </section>
 
 
 
         <section>
 
-            <!--corpo com imagens e detalhes com texto etc...-->
+          <link rel="stylesheet" href="imagens\caesegatos_com_br.jpg">
+        <div class="elementoUm">
+            <div class="">
+              <div class="bolsaPet">
+                <img width="350" height="350"id="bolsaPet" alt="" src="imagens\bolsaPet.jpg" complete="complete">
+                <button>Comprar</button>
+              </div>
+            </div>
+            <div class="caminhaPet">
+              <div class="box-banner">
+                <img width="350" height="350" id="caminhaPet" alt="" src="imagens\caminhaPet.webp" complete="complete">
+                </div>
+              </div>
+              <div class="casinhaPet">
+                <div class="box-banner">
+                 <img width="350" height="350" src="imagens\casinhaPet.jpg" complete="complete">
+                  </div>
+                </div>
+              </div>
+            </div>
+
+        </section>
+
+        <section class="elementoDois">
+          <div class="tigela">
+            <img width="350" height="350" id="" alt="" src="imagens\tigela_gato.webp" complete="complete">
+          </div>
+          <div class="racao-gato">
+            <img width="350" height="350" id="" alt="" src="imagens\racao-gato.jpg" complete="complete">
+          </div>
+          <div class="racaoDog">
+            <img width="350" height="350" id="" alt="" src="imagens\racao-premier-caes-adultos.webp" complete="complete">
+          </div>
 
 
         </section>
