Adicinando Footer ao Projeto

--- a/home.html
+++ b/home.html
@@ -114,9 +114,76 @@
 
 
  <footer>
+  <div class="imagem_logo2">
+    <a href="/home.html">
+        <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="95%" height="100px" >
+    </a>
+</div>
+
+<section class="footer_all">
+
+  <!--Primeiro Artico---------------------------------------------------------------------------------------------->
+  <article>
+      <label for="">Sobre o Grupo Seven </label>
+      <ul>
+        <li type = "none">
+          <a class="lista" href="">Quem Somos </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" class="Lista" href="">Nossas Lojas </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Dúvidas </a>
+        </li>
+      </ul>
 
 
 
+  </article>
+  <!--Fim Primeiro Artico---------------------------------------------------------------------------------------------->
+
+  <!--Segundo Artico---------------------------------------------------------------------------------------------->
+  <article>
+    <label for="">Central de Atendimento </label>
+    <ul>
+      <li type = "none">
+        <a class="lista"href="">Anucie Seu Produto Aqui </a>
+      </li>
+
+      <li type = "none">
+        <a class="lista" href="">Política de Vendas </a>
+      </li>
+
+      <li type = "none">
+        <a class="lista" href="">Troca e Devolução </a>
+      </li>
+
+      <li type = "none">
+        <a class="lista" href="">Prazo e Entrega </a>
+      </li>
+    </ul>
+
+    
+
+  </article>
+<!--Segundo Artico---------------------------------------------------------------------------------------------->
+
+</section>
+
+<section class="icones">
+  <div>
+    <a href=""><i class="fa-brands fa-facebook"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
+    <a href=""><i class="fa-brands fa-twitter"></i></a>
+  </div>
+  
+</section>
 
  </footer>
 
