--- a/farmacia.html
+++ b/farmacia.html
@@ -94,7 +94,7 @@
 
             <!--inicio slide imagens---------------------------------------------------------------------------------->
             <div class="slide first">
-                <img src="/imagens/carrossell_imagem1_farmacia.png" alt="imagem 1">
+                <img src="imagens/carrossell_imagem1_farmacia.png" alt="imagem 1">
             </div>
 
             <div class="slide">
@@ -106,12 +106,12 @@
             </div>
 
             <div class="slide">
-              <img src="/imagens/carrossell_imagem4_farmacia.png" alt="imagem 4">
+              <img src="imagens/carrossell_imagem4_farmacia.png" alt="imagem 4">
             </div>
             <!--fim slide imagens--------------------------------------------------------------------------------------->
 
 
-            <!-- inicio navegação automatica---------------------------------------------------------------------------->
+            <!-- inicio navegação automatica-deixa a bolinha fixa-------------------------------------------------------->
             <div class="nav_auto">
 
               <div class="auto_btn1"></div>
