configuração dos botões e whatsapp

--- a/pet.html
+++ b/pet.html
@@ -142,19 +142,19 @@
             <div class="elementoUm_article_div" >
                 <img class = "img_elementoUm_article_div" src="imagens\bolsaPet.jpg" alt="">
                 <p>Bolsa pet</p>
-                <P>R$ 140,00</P><button type="submit">comprar</button>
+                <P>R$ 140,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
             <div class="elementoUm_article_div" >
                 <img class = "img_elementoUm_article_div" src="imagens\caminhaPet.webp" alt="">
                 <p>Caminha pet</p>
-                <P>R$ 190,00</P><button type="submit">comprar</button>
+                <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
             <div class="elementoUm_article_div" id="block_4_imagens_space">
                 <img class = "img_elementoUm_article_div" src="imagens\casinhaPet.jpg" alt="">
                 <p>Casinha pet</p>
-                <P>R$ 200,00</P><button type="submit">comprar</button>
+                <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
         </article>
@@ -170,19 +170,19 @@
           <div class="elementoDois_article_div" >
               <img class = "img_elementoDois_article_div" src="imagens\tigela_gato.webp" alt="">
               <p>Bolsa pet</p>
-              <P>R$ 140,00</P><button type="submit">comprar</button>
+              <P>R$ 140,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" >
               <img class = "img_elementoDois_article_div" src="imagens\racao-gato.jpg" alt="">
               <p>Caminha pet</p>
-              <P>R$ 190,00</P><button type="submit">comprar</button>
+              <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" id="block_4_imagens_space">
               <img class = "img_elementoDois_article_div" src="imagens\racao-premier-caes-adultos.webp" alt="">
               <p>Casinha pet</p>
-              <P>R$ 200,00</P><button type="submit">comprar</button>
+              <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
       </article>
@@ -194,17 +194,18 @@
 
 
 <footer>
-  <div class="imagem_logo2">
-      <a href="/home.html">
-          <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="95%" height="100px" >
-      </a>
-  </div>
 
-<section class="footer_all">
+  <section class="footer_all">
+
+    <div class="imagem_logo2">
+        <a href="/home.html">
+            <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="95%" height="100px" >
+        </a>
+    </div>
 
   <!--Primeiro Artico---------------------------------------------------------------------------------------------->
   <article>
-      <label for="">Sobre o Grupo Seven </label>
+      <label class="label_footer" for="">Sobre o Grupo Seven </label>
       <ul>
           <li type = "none">
             <a class="lista" href="">Quem Somos </a>
@@ -228,7 +229,7 @@
 
   <!--Segundo Artico---------------------------------------------------------------------------------------------->
   <article>
-    <label for="">Central de Atendimento </label>
+    <label class="label_footer" for="">Central de Atendimento </label>
     <ul>
         <li type = "none">
           <a class="lista"href="">Anucie Seu Produto Aqui </a>
@@ -250,10 +251,7 @@
   </article>
 <!--Segundo Artico---------------------------------------------------------------------------------------------->
 
-</section>
-
-<section class="icones">
-  <div>
+  <div class="icones">
     <a href=""><i class="fa-brands fa-facebook"></i></a>
     <a href=""><i class="fa-brands fa-instagram"></i></a>
     <a href=""><i class="fa-brands fa-twitter"></i></a>
@@ -262,7 +260,11 @@
 </section>
 
  </footer>
-
+ 
+  <div class="whatsapp">
+  <p>Duvidas ?</p>
+  <a target="_blank" href="https://wa.me/+5511966471637?text=Olá tudo bem ? "><i id="whats" class="fa-brands fa-whatsapp-square"></i></a>
+  </div>
 <script src="js/pet.js"></script>
 </body>
 
