--- a/pet.html
+++ b/pet.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/body_pet.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 </head>
 
@@ -180,6 +181,69 @@
 
 
  <footer>
+  <section class="footer_all">
+
+    <div class="imagem_logo2">
+        <a href="/home.html">
+            <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="95%" height="100px" >
+        </a>
+    </div>
+
+  <!--Primeiro Artico---------------------------------------------------------------------------------------------->
+  <article>
+      <label class="label_footer" for="">Sobre o Grupo Seven </label>
+      <ul>
+          <li type = "none">
+            <a class="lista" href="">Quem Somos </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" class="Lista" href="">Nossas Lojas </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" href="">Dúvidas </a>
+          </li>
+      </ul>
+
+  </article>
+  <!--Fim Primeiro Artico---------------------------------------------------------------------------------------------->
+
+  <!--Segundo Artico---------------------------------------------------------------------------------------------->
+  <article>
+    <label class="label_footer" for="">Central de Atendimento </label>
+    <ul>
+        <li type = "none">
+          <a class="lista"href="">Anucie Seu Produto Aqui </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Política de Vendas </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Troca e Devolução </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Prazo e Entrega </a>
+        </li>
+    </ul>
+
+  </article>
+<!--Segundo Artico---------------------------------------------------------------------------------------------->
+
+  <div class="icones">
+    <a href=""><i class="fa-brands fa-facebook"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
+    <a href=""><i class="fa-brands fa-twitter"></i></a>
+  </div>
+  
+</section>
 
 
 
