Alteração no pet nome das fotos

--- a/pet.html
+++ b/pet.html
@@ -162,32 +162,33 @@
  </section>
 <!-- fim primeiro block de imagens---------------------------------------------------------------------------->
 
-
+<!-- inicio segundo block de imagens---------------------------------------------------------------------------->
  <section class="elementoDois_section">
      
       <article class="elementoDois_article" >
 
           <div class="elementoDois_article_div" >
               <img class = "img_elementoDois_article_div" src="imagens\tigela_gato.webp" alt="">
-              <p>Bolsa pet</p>
-              <P>R$ 140,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+              <p>Tigela para gato</p>
+              <P>R$ 20,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" >
               <img class = "img_elementoDois_article_div" src="imagens\racao-gato.jpg" alt="">
-              <p>Caminha pet</p>
-              <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+              <p>Ração para Gato</p>
+              <P>R$ 50,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
           <div class="elementoDois_article_div" id="block_4_imagens_space">
               <img class = "img_elementoDois_article_div" src="imagens\racao-premier-caes-adultos.webp" alt="">
-              <p>Casinha pet</p>
-              <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+              <p>Ração premium</p>
+              <P>R$ 80,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
       </article>
 
 </section>
+<!-- fim segundo block de imagens---------------------------------------------------------------------------->
 
 </main>
 
@@ -270,3 +271,4 @@
 
 
 </html>
+
