configurando a página da farmácia

--- a/farmacia.html
+++ b/farmacia.html
@@ -8,7 +8,9 @@
     <title>Grupo Seven / Farmácia</title>
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/body_farmacia_carrossell.css">
     <link rel="stylesheet" href="css/body_farmacia.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -135,20 +137,141 @@
 
 
 
-      <section>
+        <!-- inicio primeiro block de imagens---------------------------------------------------------------------------->
+    <section class="elementoUm_section">
+     
+      <article class="elementoUm_article" >
 
-          <!--corpo com imagens e detalhes com texto etc...-->
+          <div class="elementoUm_article_div" >
+              <img class = "img_elementoUm_article_div" src="imagens/imagem_farmacia1.jpg" alt="">
+              <p>Dipirona 500mg ,240 comprimidos</p>
+              <P>R$ 17,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+          </div>
 
+          <div class="elementoUm_article_div" >
+              <img class = "img_elementoUm_article_div" src="imagens/imagem_farmacia2.jpg" alt="">
+              <p>Paracetamol 750mg ,20 comprimidos</p>
+              <P>R$ 19,70</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+          </div>
 
-      </section>
+          <div class="elementoUm_article_div" id="block_4_imagens_space">
+              <img class = "img_elementoUm_article_div" src="imagens/imagem_farmacia3.jpg" alt="">
+              <p>Novanoite 320mg , 10 comprimidos</p>
+              <P>R$ 25,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+          </div>
 
+      </article>
+
+</section>
+<!-- fim primeiro block de imagens---------------------------------------------------------------------------->
+
+<!-- inicio segundo block de imagens---------------------------------------------------------------------------->
+<section class="elementoDois_section">
+   
+    <article class="elementoDois_article" >
+
+        <div class="elementoDois_article_div" >
+            <img class = "img_elementoDois_article_div" src="imagens/imagem_farmacia4.jpg" alt="">
+            <p>Imecap hair max , 30 cápsulas</p>
+            <P>R$ 79,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+        </div>
+
+        <div class="elementoDois_article_div" >
+            <img class = "img_elementoDois_article_div" src="imagens/imagem_farmacia5.jpg" alt="">
+            <p>Natucor preto</p>
+            <P>R$ 16,90</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+        </div>
+
+        <div class="elementoDois_article_div" id="block_4_imagens_space">
+            <img class = "img_elementoDois_article_div" src="imagens/imagem_farmacia6.jpg" alt="">
+            <p>Tio Nacho engrossador</p>
+            <P>R$ 19,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
+        </div>
+
+    </article>
+
+</section>
+<!-- fim segundo block de imagens---------------------------------------------------------------------------->
 
 
 </main>
 
 
  <footer>
+ 
+  
+<footer>
 
+  <section class="footer_all">
+
+    <div class="imagem_logo2">
+        <a href="/home.html">
+            <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="95%" height="100px" >
+        </a>
+    </div>
+
+  <!--Primeiro Artico---------------------------------------------------------------------------------------------->
+  <article>
+      <label class="label_footer" for="">Sobre o Grupo Seven </label>
+      <ul>
+          <li type = "none">
+            <a class="lista" href="">Quem Somos </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" class="Lista" href="">Nossas Lojas </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" href="">Dúvidas </a>
+          </li>
+      </ul>
+
+  </article>
+  <!--Fim Primeiro Artico---------------------------------------------------------------------------------------------->
+
+  <!--Segundo Artico---------------------------------------------------------------------------------------------->
+  <article>
+    <label class="label_footer" for="">Central de Atendimento </label>
+    <ul>
+        <li type = "none">
+          <a class="lista"href="">Anucie Seu Produto Aqui </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Política de Vendas </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Troca e Devolução </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Prazo e Entrega </a>
+        </li>
+    </ul>
+
+  </article>
+<!--Segundo Artico---------------------------------------------------------------------------------------------->
+
+  <div class="icones">
+    <a href=""><i class="fa-brands fa-facebook"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
+    <a href=""><i class="fa-brands fa-twitter"></i></a>
+  </div>
+  
+</section>
+
+ </footer>
+ 
+  <div class="whatsapp">
+  <p>Duvidas ?</p>
+  <a target="_blank" href="https://wa.me/+5511966471637?text=Olá tudo bem ? "><i id="whats" class="fa-brands fa-whatsapp-square"></i></a>
+  </div>
 
 
 
