alterando html e css parte pet

--- a/pet.html
+++ b/pet.html
@@ -140,18 +140,22 @@
 
               <div class="bolsaPet">
                 <img width="350" height="350"id="bolsaPet" alt="" src="imagens\bolsaPet.jpg" complete="complete">
-                <span>Bolsa Pet</span>
-                <button>Comprar</button>
+                <p>Bolsa pet</p>
+                <P>R$ 140,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
               </div>
             </div>
             <div class="caminhaPet">
               <div class="box-banner">
                 <img width="350" height="350" id="caminhaPet" alt="" src="imagens\caminhaPet.webp" complete="complete">
+                <p>Caminha pet</p>
+                <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
                 </div>
               </div>
               <div class="casinhaPet">
                 <div class="box-banner">
                  <img width="350" height="350" src="imagens\casinhaPet.jpg" complete="complete">
+                 <p>Casinha pet</p>
+                 <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
                   </div>
                 </div>
               </div>
@@ -162,12 +166,18 @@
         <section class="elementoDois">
           <div class="tigela">
             <img width="350" height="350" id="" alt="" src="imagens\tigela_gato.webp" complete="complete">
+            <p>Tigela para gato</p>
+            <P>R$ 20,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
           <div class="racao-gato">
             <img width="350" height="350" id="" alt="" src="imagens\racao-gato.jpg" complete="complete">
+            <p>Ração para Gato</p>
+            <P>R$ 50,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
           <div class="racaoDog">
             <img width="350" height="350" id="" alt="" src="imagens\racao-premier-caes-adultos.webp" complete="complete">
+            <p>Ração premium</p>
+            <P>R$ 80,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
 
@@ -180,7 +190,69 @@
 
 
  <footer>
+  <section class="footer_all">
 
+    <div class="imagem_logo2">
+        <a href="/home.html">
+            <img class="imagem2" src="/imagens/Grupo Seven 2.PNG" alt="Logo da empresa"  width="100%" height="100px" >
+        </a>
+    </div>
+
+  <!--Primeiro Artico---------------------------------------------------------------------------------------------->
+  <article>
+      <label class="label_footer" for="">Sobre o Grupo Seven </label>
+      <ul>
+          <li type = "none">
+            <a class="lista" href="">Quem Somos </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" class="Lista" href="">Nossas Lojas </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
+          </li>
+
+          <li type = "none">
+            <a class="lista" href="">Dúvidas </a>
+          </li>
+      </ul>
+
+  </article>
+  <!--Fim Primeiro Artico---------------------------------------------------------------------------------------------->
+
+  <!--Segundo Artico---------------------------------------------------------------------------------------------->
+  <article>
+    <label class="label_footer" for="">Central de Atendimento </label>
+    <ul>
+        <li type = "none">
+          <a class="lista"href="">Anucie Seu Produto Aqui </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Política de Vendas </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Troca e Devolução </a>
+        </li>
+
+        <li type = "none">
+          <a class="lista" href="">Prazo e Entrega </a>
+        </li>
+    </ul>
+
+  </article>
+<!--Segundo Artico---------------------------------------------------------------------------------------------->
+
+  <div class="icones">
+    <a href=""><i class="fa-brands fa-facebook"></i></a>
+    <a href=""><i class="fa-brands fa-instagram"></i></a>
+    <a href=""><i class="fa-brands fa-twitter"></i></a>
+  </div>
+  
+</section>
 
 
 
