configurando a página home e variedades

--- a/farmacia.html
+++ b/farmacia.html
@@ -219,11 +219,11 @@
           </li>
 
           <li type = "none">
-            <a class="lista" class="Lista" href="">Nossas Lojas </a>
+            <a class="lista"  href="">Nossas Lojas </a>
           </li>
 
           <li type = "none">
-            <a class="lista" class="Lista" href="">Trabalhe Conosco </a>
+            <a class="lista"  href="">Trabalhe Conosco </a>
           </li>
 
           <li type = "none">
