primeiros testes com o responsivo nas imagens

--- a/farmacia.html
+++ b/farmacia.html
@@ -138,9 +138,8 @@
 
 
         <!-- inicio primeiro block de imagens---------------------------------------------------------------------------->
-    <section class="elementoUm_section">
-     
-      <article class="elementoUm_article" >
+    
+      <section class="elementoUm_article" >
 
           <div class="elementoUm_article_div" >
               <img class = "img_elementoUm_article_div" src="imagens/imagem_farmacia1.jpg" alt="">
@@ -160,15 +159,13 @@
               <P>R$ 25,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
-      </article>
+      </section>
 
-</section>
 <!-- fim primeiro block de imagens---------------------------------------------------------------------------->
 
 <!-- inicio segundo block de imagens---------------------------------------------------------------------------->
-<section class="elementoDois_section">
-   
-    <article class="elementoDois_article" >
+
+    <section class="elementoDois_article" >
 
         <div class="elementoDois_article_div" >
             <img class = "img_elementoDois_article_div" src="imagens/imagem_farmacia4.jpg" alt="">
@@ -188,9 +185,8 @@
             <P>R$ 19,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
         </div>
 
-    </article>
+    </section>
 
-</section>
 <!-- fim segundo block de imagens---------------------------------------------------------------------------->
 
 
