--- a/home.html
+++ b/home.html
@@ -150,9 +150,8 @@
       </div>
    </section>
     <!-- inicio primeiro block de imagens---------------------------------------------------------------------------->
-    <section class="elementoUm_section">
      
-      <article class="elementoUm_article" >
+      <section class="elementoUm_article" >
 
           <div class="elementoUm_article_div" >
               <img class = "img_elementoUm_article_div" src="imagens/imagem_variedades1.png" alt="">
@@ -172,9 +171,8 @@
               <P>R$ 2.910,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
-      </article>
+      </section>
 
-</section>
 <!-- fim primeiro block de imagens---------------------------------------------------------------------------->
 
     <section class="cabecalho_imagens2">
@@ -184,9 +182,8 @@
     </section>
 
     <!-- Segundo  block de imagens---------------------------------------------------------------------------->
-    <section class="elementoDois_section">
      
-      <article class="elementoDois_article" >
+      <section class="elementoDois_article" >
 
           <div class="elementoDois_article_div" >
               <img class = "img_elementoDois_article_div" src="/imagens/tigela_gato.webp" alt="">
@@ -206,9 +203,8 @@
               <P>R$ 190,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
-      </article>
+      </section>
 
-</section>
 <!-- fim segundo block de imagens---------------------------------------------------------------------------->
 
 <section class="cabecalho_imagens3">
@@ -218,9 +214,8 @@
 </section>
 
 <!-- terceiro block de imagens---------------------------------------------------------------------------->
-<section class="elementoTres_section">
  
-  <article class="elementoTres_article" >
+  <section class="elementoTres_article" >
 
       <div class="elementoTres_article_div" >
           <img class = "img_elementoTres_article_div" src="imagens/imagem_farmacia1.jpg" alt="">
@@ -240,15 +235,12 @@
           <P>R$ 25,99</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
       </div>
 
-  </article>
+  </section>
 
-</section>
 <!-- fim terceiro block de imagens---------------------------------------------------------------------------->
 
 
   </main>
-
-
 
 
  <footer>
