--- a/pet.html
+++ b/pet.html
@@ -135,9 +135,8 @@
     </section> <!-- fim carrosel de imagens do site parte superior ---------------------------------------------------->
 
    <!-- inicio primeiro block de imagens---------------------------------------------------------------------------->
-    <section class="elementoUm_section">
-     
-        <article class="elementoUm_article" >
+   
+        <section class="elementoUm_article" >
 
             <div class="elementoUm_article_div" >
                 <img class = "img_elementoUm_article_div" src="imagens\bolsaPet.jpg" alt="">
@@ -157,15 +156,14 @@
                 <P>R$ 200,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
             </div>
 
-        </article>
+        </section>
 
- </section>
+ 
 <!-- fim primeiro block de imagens---------------------------------------------------------------------------->
 
 <!-- inicio segundo block de imagens---------------------------------------------------------------------------->
- <section class="elementoDois_section">
-     
-      <article class="elementoDois_article" >
+ 
+      <section class="elementoDois_article" >
 
           <div class="elementoDois_article_div" >
               <img class = "img_elementoDois_article_div" src="imagens\tigela_gato.webp" alt="">
@@ -185,9 +183,9 @@
               <P>R$ 80,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
-      </article>
+      </section>
 
-</section>
+
 <!-- fim segundo block de imagens---------------------------------------------------------------------------->
 
 </main>
