atualização de layout

--- a/home.html
+++ b/home.html
@@ -165,7 +165,7 @@
 
           <div class="elementoUm_article_div" >
               <img class = "img_elementoUm_article_div" src="imagens/imagem_variedades1.png" alt="">
-              <p> Galaxy S20 ,Samsung 128GB</p>
+              <p> Samsung S20 128GB</p>
               <P>R$ 1.799,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
@@ -177,7 +177,7 @@
 
           <div class="elementoUm_article_div" id="block_4_imagens_space">
               <img class = "img_elementoUm_article_div" src="imagens/imagem_variedades3.png" alt="">
-              <p>Aspirador Xiaomi mi robot Vacuum</p>
+              <p>Xiaomi mi robot Vacuum</p>
               <P>R$ 2.910,00</P><button type="submit">Comprar</button><button type="submit">Carrinho</button>
           </div>
 
