--- a/formulario.html
+++ b/formulario.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/4d88c7f41d.js" crossorigin="anonymous"></script>
     <!--esse script é gerado pelo fontawesome.com que gera icones -->
 
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/formulario_header.css">
     <link rel="stylesheet" href="css/formulario.css">
    
 </head>
