Atualização necessária no menu hamburguer

--- a/pet.html
+++ b/pet.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/body_pet.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="/css/menu_hamburguer.css">
 
 </head>
 
@@ -65,8 +66,7 @@
     <section class="segunda_cabecalho">
 
       <article class="link">
-        <i class="fa-solid fa-list"></i>
-        <p class="texto_nav"> Navegue aqui</p>
+        <a id="button_menu"> <i class="fa-solid fa-list"></i></a> <p class="texto_nav"> Navegue aqui</p>  
       </article>
 
       <article class="abas">
@@ -90,7 +90,39 @@
     </section>
 
   </header>
+  
+  <section class="body_menu_hamburguer" ></section>
+  <div class="menu_hamburguer" id="menu_hamburguer">
+    
+    <ul>
+        <li class="lista_label_hambuerguer">
+          Variedades
+           <ul >
+            <a href="/variedades.html"> <li>Eletrônicos</li></a>
+            <a href="/variedades.html"> <li>Móveis</li></a>
+            <a href="/variedades.html"><li>Roupas</li></a>
+           </ul>
+        </li>
 
+        <li class="lista_label_hambuerguer" >Espaço pet
+            <ul >
+              <a href="pet.html"> <li>Gatos</li></a>
+              <a href="pet.html"><li>Cachorros</li></a>
+              <a href="pet.html"><li>Diversos</li></a> 
+            </ul>
+        </li>
+
+        <li class="lista_label_hambuerguer" >Farmácia
+            <ul >
+              <a href="farmacia.html"><li>Remédios</li></a>
+              <a href="farmacia.html"><li>Beleza</li></a>
+              <a href="farmacia.html"><li>Diversos</li></a>
+            </ul>
+        </li>
+
+    </ul>
+
+</div>
 
   <main>
     <section class="slider">
@@ -304,7 +336,8 @@
     </div>-->
 
 
-
+    <script src="js/pet.js"></script>
+    <script src="js/menu_hamburguer.js"></script>
 
 </body>
 
